[package]
name = "gymtracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bonsaidb = { version = "*", features = ["local"] }
clap = { version = "3.2", features = ["derive"] }
prettytable = { git = "https://github.com/phsym/prettytable-rs", package = "prettytable-rs", features = ["evcxr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
